--- a/produkt.html
+++ b/produkt.html
@@ -32,13 +32,14 @@
             <div>
                 <img src="/1163.webp" alt="sahara_stor">
             </div>
-            <div>
+            <div class="purchaseBox">
                 <h1>Nike</h1>
                 <h2>Sahara Team India Fanwear Round Neck Jersey</h2>
                 <h3>Price: 895 DKK</h3>
             </div>
         </div>
         <script src="menu.js"></script>
+        <script src="product.js"></script>
     </main>
     <footer>
 
