--- a/produkt.html
+++ b/produkt.html
@@ -34,7 +34,7 @@
             </div>
             <div class="purchaseBox">
                 <h1>Nike</h1>
-                <h2>Sahara Team India Fanwear Round Neck Jersey</h2>
+                <h2 class="purchaseBox">Sahara Team India Fanwear Round Neck Jersey</h2>
                 <h3>Price: 895 DKK</h3>
             </div>
         </div>
