--- a/kategori.html
+++ b/kategori.html
@@ -28,17 +28,18 @@
     </header>
     <main>
         <h1>Kategorier</h1>
+        <section class="grid_1-1-1">
+            <template id="categoryList">
+                <article>
 
-        <div class="grid_1-1-1">
-            <a class="kategori" href="produktliste.html">ACCESSORIES</a>
-            <a class="kategori" href="produktliste.html">APPAREL</a>
-            <a class="kategori" href="produktliste.html">FOOTWEAR</a>
-            <a class="kategori" href="produktliste.html">FREE ITEMS</a>
-            <a class="kategori" href="produktliste.html">PERSONAL CARE</a>
-            <a class="kategori" href="produktliste.html">SPORTING GOODS</a>
-        </div>
+                    <a class="categoryLink" href="produktliste.html">sko</a>
+                </article>
+            </template>
+        </section>
+
 
         <script src="menu.js"></script>
+        <script src="kategori.js"></script>
     </main>
     <footer>
 
