--- a/produkt.html
+++ b/produkt.html
@@ -28,16 +28,22 @@
     </header>
     <main>
         <h1>Produkt</h1>
-        <div class="grid_1-1">
-            <div>
-                <img src="/1163.webp" alt="sahara_stor">
-            </div>
-            <div class="purchaseBox">
-                <h1>Nike</h1>
-                <h2 class="purchaseBox">Sahara Team India Fanwear Round Neck Jersey</h2>
-                <h3>Price: 895 DKK</h3>
-            </div>
-        </div>
+        <section class="grid_1-1">
+            <template id="productTemplate">
+                <article>
+
+                    <div>
+                        <img src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp" alt="Blue T20">
+                    </div>
+                    <div class="purchaseBox">
+                        <h1>Nike</h1>
+                        <h2>Sahara Team India Fanwear Round Neck Jersey</h2>
+                        <h3>Price: <span></span> DKK</h3>
+                    </div>
+
+                </article>
+            </template>
+        </section>
         <script src="menu.js"></script>
         <script src="product.js"></script>
     </main>
