--- a/produktliste.html
+++ b/produktliste.html
@@ -28,15 +28,37 @@
     </header>
     <main>
         <h1>Produktliste</h1>
-        <div class="grid_1">
-            <section class="grid_1-1-1-1">
 
-                <div><a href="produkt.html">
+
+        <section class="grid_1-1-1-1">
+
+            <template id="smallProductTemplate">
+
+                <article class="smallProduct onSale discounted ">
+                    <img src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp" alt="Blue T20">
+                    <h3>Blue T20 Indian Cricket Jersey</h3>
+                    <p class="subtle">Nike</p>
+                    <p class="price"><span>1500</span> DKK</p>
+                    <div class="twist">
+                        <p class="udsalg">- <span>30</span>% </p>
+                    </div>
+                    <a class="read_more" href="produkt.html">Read More</a>
+                </article>
+
+            </template>
+
+        </section>
+
+
+
+        <!-- 
+                <div>
+                    <a href="produkt.html">
                         <img class="produktliste" src="/1163-1.webp" alt="sahara">
                     </a>
-                    <h2>Nike</h2>
-                    <a href="produkt.html">Sahara Team India Fanwear Round Neck Jersey</a>
-
+                    <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
+                    <p> </p>
+                    <p></p>
                     <br>
                     <h4>Price: 895 DKK</h4>
 
@@ -122,11 +144,9 @@
                     <a href="produkt.html">Tee</a>
                     <br>
                     <h4>Price: 1899 DKK</h4>
-                </div>
+                </div> -->
 
-            </section>
-        </div>
-
+        <script src="produktliste.js"></script>
         <script src="menu.js"></script>
     </main>
     <footer>
